[workspace]

[profile.release]
strip = true
opt-level = 3
# TODO: `lto = true` later.
codegen-units = 4

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
strip = false

[package]
name = "mirjit"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Rust wrapper around Vladimir Makarov's MIR"
categories = ["external-ffi-bindings", "compilers"]
keywords = ["compilers", "ffi", "jit"]
homepage = "https://github.com/vnmakarov/mir"
repository = "https://github.com/jerome-trc/mir-rs"
resolver = "2"
publish = false

[features]
default = []

[dependencies]
sys = { package = "mirjit-sys", path = "./sys" }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
divan = "0.1.8"
