[package]
name = "mirjit-sys"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Generated FFI bindings to Vladimir Makarov's MIR"
categories = ["external-ffi-bindings", "compilers"]
keywords = ["compilers", "ffi", "jit"]
homepage = "https://github.com/vnmakarov/mir"
repository = "https://github.com/jerome-trc/mir-rs"
resolver = "2"
publish = false

[features]
default = []
parallel = []

[build-dependencies]
bindgen = "0.69.1"
cc = { version = "1.0.83", features = ["parallel"] }
miette = { version = "5.10.0", features = ["fancy"] }
